[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hcsegment"
version = "0.0.1"
description = "Cell segmentation from HCS images"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Chris Viets" }
]
dependencies = [
    "numpy",
    "iohub"
]

[project.urls]
"Homepage" = "https://github.com/cviets/hcsegment"
"Bug Tracker" = "https://github.com/cviets/hcsegment/issues"

[project.scripts]
hcsegment = "hcsegment.cli:main"